functionallity for endless scroll

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -42,3 +42,20 @@
   font-size: 11px
   color: #7A7A7A
   text-decoration: line-through
+
+.gif-container
+  display: flex
+  align-items: center
+  justify-content: center
+  width: 100%
+  height: 100px
+  margin-bottom: 1rem
+
+.loading-gif
+  background-image: image-url('Eclipse.gif')
+  background-position: center
+  background-size: contain
+  background-repeat: no-repeat
+  height: 140px
+  width: 120px
+  // background-color: red
