fix: added lazy load

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -58,4 +58,8 @@
   background-repeat: no-repeat
   height: 140px
   width: 120px
+  display: none
   // background-color: red
+
+.hidden-products
+  display: none
