--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -3,9 +3,55 @@
     ShopifyApp.ready(function(){
       ShopifyApp.Bar.initialize({ title: "Home" });
     });
-.product-container
-  .js-all-products
-    = render partial: 'products'
+.filter-container
+  .filter-heading-container
+    .filter-heading FILTER
+    .main-filter-icon.js-show-main-filter
+  select.select-style name="colour"
+    option value="Featured" Featured
+    option value="best-selling" Best Selling
+    option value="title-ascending"  Alphabetically, A-Z
+    option value="title-descending" Alphabetically, Z-A
+    option value="price-ascending" Price, low to high
+    option value="price-descending" Price, high to low
+    option value="created-descending" Date, new to old
+    option value="created-ascending" Date, old to new
+    option value="price-descending" Price, high to low
+.main-container
+  .filter-data-options-container.js-main-container
+    .filter-brand-container
+      .heading-container
+        .filter-brand-heading BRAND
+        .brand-filter-icon.js-show-brand-filter
+      .filter-brand-collection.js-brand-container
+        - @vendor_array.each do |va|
+          .black-box-container
+            .black-box
+            .sub-heading = va
+    .filter-size-container
+      .heading-container
+        .filter-size-heading SIZE
+        .size-filter-icon.js-show-size-filter
+      .filter-size-collection.js-size-container
+        - @size_array.each do |size|
+          .black-box-container
+            .black-box
+            .sub-heading = size
+    .filter-type-container
+      .heading-container
+        .filter-type-heading TYPE
+        .type-filter-icon.js-show-type-filter
+      .filter-type-collection.js-type-container
+        - @product_type.each do |pt|
+          .black-box-container
+            .black-box
+            .sub-heading = pt
 
-.gif-container
-  .loading-gif.js-loading-gif
+
+
+  .product-container
+    .js-all-products
+      = render partial: 'products'
+
+  .gif-container
+    .loading-gif.js-loading-gif
