--- a/app/views/home/_products.html.slim
+++ b/app/views/home/_products.html.slim
@@ -1,7 +1,21 @@
 .row
-  - @products.in_groups(3).to_a.each_with_index do |products, i|
-    - products.each do |product|
-      .columns.medium-3.small-6 style="margin-bottom: 46px" class="js-product-group #{i == 0 && showFirst ? '' : 'hidden-products'}"
+  - if @products.count >= 36
+    - @products.in_groups(3).to_a.each_with_index do |products, i|
+      - products.each do |product|
+        .columns.medium-3.small-6 style="margin-bottom: 46px" class="js-product-group #{i == 0 && showFirst ? '' : 'hidden-products'}"
+          .single-product-container
+            .img-container
+              .product-image style="background-image: url('#{product.image.src}')"
+            .vendor-field = product.vendor
+            .title-container
+              .title-field = product.title
+            .price-container
+              .price-field = "£ #{product.variants.first.price} GPB"
+              - if product.variants.first.compare_at_price.present?
+                .compare-at-price = "£ #{product.variants.first.compare_at_price}"
+  - else
+    - @products.each do |product|
+      .columns.medium-3.small-6 style="margin-bottom: 46px" class="js-product-group"
         .single-product-container
           .img-container
             .product-image style="background-image: url('#{product.image.src}')"
