--- a/app/assets/stylesheets/filter.sass
+++ b/app/assets/stylesheets/filter.sass
@@ -67,6 +67,7 @@
 .black-box-container
   display: flex
   height: 20px
+  min-width: 160px
 
 .black-box
   width: 11px
@@ -87,6 +88,7 @@
   color: black
   font-size: 11px
   line-height: 11px
+  transition: .5s
   &:hover, &:active, &:focus, &:disabled
     color: #fe89b5
 
