--- a/app/views/home/_products.html.slim
+++ b/app/views/home/_products.html.slim
@@ -6,7 +6,7 @@
           .single-product-container
             .img-container
               .product-image style="background-image: url('#{product.image.src}')"
-              .product-image-two style="display: none; background-image: url('#{product.images.third.src}')"
+              .product-image-two style="display: none; background-image: url('#{product.images.second.src}')"
             .vendor-field = product.vendor
             .title-container
               .title-field = product.title
