--- a/app/views/home/_product_fields.html.slim
+++ b/app/views/home/_product_fields.html.slim
@@ -4,7 +4,7 @@
     .product-image-two style="display: none; background-image: url('#{product.images.second.src}')"
   .vendor-field = product.vendor
   .title-container
-    .title-field = product.variants.map{|a| a.title}
+    .title-field = product.title
   .price-container
     .price-field = "£ #{product.variants.first.price} GPB"
     - if product.variants.first.compare_at_price.present?
