added price filters (static)

--- a/app/assets/stylesheets/filter.sass
+++ b/app/assets/stylesheets/filter.sass
@@ -23,11 +23,11 @@
   font-weight: bold
   margin-right: 0.5rem
 
-.filter-brand-heading, .filter-size-heading, .filter-type-heading
+.filter-brand-heading, .filter-size-heading, .filter-type-heading, .filter-price-heading
   font-weight: bold
   font-size: 14px
 
-.brand-filter-icon, .type-filter-icon, .size-filter-icon, .main-filter-icon
+.brand-filter-icon, .type-filter-icon, .size-filter-icon, .main-filter-icon, .price-filter-icon
   height: 11px
   width: 11px
   background-image: asset-url('add.svg')
@@ -46,7 +46,7 @@
   width: 10rem
   float: left
 
-.filter-brand-container
+.filter-brand-container, .filter-price-container
   border-bottom: 1px solid black
   padding-bottom: 1rem
 
