--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -3,7 +3,7 @@
 
 .product-container
   width: 100%
-  font-size: 11px
+  font-size: 12px
   line-height: 12px
   color: #2A2A2A
 
@@ -65,3 +65,21 @@
 
 .hidden-products
   display: none
+
+
+// Test div for search
+.plop
+  background: white
+  width: 100%
+  height: 25em
+  position: absolute
+  top: 40px
+  z-index: 4000
+  overflow: scroll
+  display: none
+
+.plop-image
+  background-size: cover
+  background-position: center
+  height: 50px
+  width: 50px
