--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -107,7 +107,7 @@ $print-hrefs: true;
 
 $breakpoints: (
   small: 0,
-  medium: 640px,
+  medium: 800px,
   large: 1024px,
   xlarge: 1200px,
   xxlarge: 1440px,
@@ -494,25 +494,25 @@ $meter-fill-bad: $alert-color;
 // 25. Off-canvas
 // --------------
 
-$offcanvas-sizes: (
-  small: 250px,
-);
-$offcanvas-vertical-sizes: (
-  small: 250px,
-);
-$offcanvas-background: $light-gray;
-$offcanvas-shadow: 0 0 10px rgba($black, 0.7);
-$offcanvas-inner-shadow-size: 20px;
-$offcanvas-inner-shadow-color: rgba($black, 0.25);
-$offcanvas-overlay-zindex: 11;
-$offcanvas-push-zindex: 12;
-$offcanvas-overlap-zindex: 13;
-$offcanvas-reveal-zindex: 12;
-$offcanvas-transition-length: 0.5s;
-$offcanvas-transition-timing: ease;
-$offcanvas-fixed-reveal: true;
-$offcanvas-exit-background: rgba($white, 0.25);
-$maincontent-class: 'off-canvas-content';
+// $offcanvas-sizes: (
+//   small: 250px,
+// );
+// $offcanvas-vertical-sizes: (
+//   small: 250px,
+// );
+// $offcanvas-background: $light-gray;
+// $offcanvas-shadow: 0 0 10px rgba($black, 0.7);
+// $offcanvas-inner-shadow-size: 20px;
+// $offcanvas-inner-shadow-color: rgba($black, 0.25);
+// $offcanvas-overlay-zindex: 11;
+// $offcanvas-push-zindex: 12;
+// $offcanvas-overlap-zindex: 13;
+// $offcanvas-reveal-zindex: 12;
+// $offcanvas-transition-length: 0.5s;
+// $offcanvas-transition-timing: ease;
+// $offcanvas-fixed-reveal: true;
+// $offcanvas-exit-background: rgba($white, 0.25);
+// $maincontent-class: 'off-canvas-content';
 
 // 26. Orbit
 // ---------
