--- a/app/assets/stylesheets/filter.sass
+++ b/app/assets/stylesheets/filter.sass
@@ -8,7 +8,7 @@
   margin-bottom: 2rem
 
 .main-container
-  padding: 0.5rem
+  min-width: 600px
 
 .filter-heading-container
   display: flex
@@ -27,7 +27,7 @@
   font-weight: bold
   font-size: 14px
 
-.brand-filter-icon, .type-filter-icon, .size-filter-icon, .main-filter-icon, .price-filter-icon
+.js-brand-filter-icon, .js-type-filter-icon, .js-size-filter-icon, .js-main-filter-icon, .js-price-filter-icon
   height: 11px
   width: 11px
   background-image: asset-url('add.svg')
