--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -1,5 +1,6 @@
 .app-container
   padding: 1rem
+  transition: margin-left .5s
 
 .product-container
   width: 100%
@@ -61,7 +62,6 @@
   height: 140px
   width: 120px
   display: none
-  // background-color: red
 
 .hidden-products
   display: none
