--- a/app/views/app_proxy/index.html.slim
+++ b/app/views/app_proxy/index.html.slim
@@ -1,18 +1,14 @@
 .app-container
-  .filter-container
-    .filter-heading-container
-      .filter-heading FILTER
-      .main-filter-icon.js-show-main-filter
-    select.select-style onchange="window.location.href=this.value;"
-      option value="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=title_ascending" Alphabetically, A-Z
-      option value="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=title_descending" Alphabetically, Z-A
-      option value="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=price_ascending" Price, low to high
-      option value="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=price_descending" Price, high to low
-      option value="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=created_descending" Date, new to old
-      option value="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=created_ascending" Date, old to new
 
-  .main-container
-    .filter-data-options-container.js-main-container
+  #mySidenav.sidenav.hidden-on-large-screen
+    div style='padding: 60px 16px'
+      .close-filter-container
+        .close-filter-text FILTER
+        a.closebtn.hidden-on-large-screen href="javascript:void(0)" &times;
+
+
+
+
       - if params[:brand].present?
         = link_to proxy_prod_path(size: params[:size], product_type: params[:product_type]) do
           .black-box-container
@@ -40,10 +36,147 @@
             .sub-heading = params[:product_type]
             .remove-filter
 
+
+
+
+
       .filter-brand-container
         .heading-container
+          .filter-brand-heading style='color: white' BRAND
+          .js-brand-filter-icon.js-show-brand-filter
+        .filter-brand-collection.js-brand-container
+          - @vendor_array.each do |va|
+            = link_to proxy_prod_path(brand: va, size: params[:size], product_type: params[:product_type]) do
+              - if params[:brand] == va
+                .black-box-container
+                  .black-box-parent style='position: relative'
+                    .black-box style='position: relative; top: 0; left: 0'
+                    .small-black-box style='position: absolute; top: 0; left: 0'
+                  .sub-heading style='color: white' = va
+                  .tick-icon
+              - else
+                .black-box-container
+                  .black-box
+                  .sub-heading style='color: white' = va
+
+      .filter-size-container
+        .heading-container
+          .filter-size-heading style='color: white' SIZE
+          .js-size-filter-icon.js-show-size-filter
+        .filter-size-collection.js-size-container
+          - @size_array.each do |size|
+            = link_to proxy_prod_path(size: size, brand: params[:brand], product_type: params[:product_type]) do
+              - if params[:size] == size
+                .black-box-container
+                  .black-box-parent style='position: relative'
+                    .black-box style='position: relative; top: 0; left: 0'
+                    .small-black-box style='position: absolute; top: 0; left: 0'
+                  .sub-heading style='color: white' = size
+                  .tick-icon
+              - else
+                .black-box-container
+                  .black-box
+                  .sub-heading  style='color: white' = size
+
+      .filter-type-container
+        .heading-container
+          .filter-type-heading style='color: white' TYPE
+          .js-type-filter-icon.js-show-type-filter
+        .filter-type-collection.js-type-container
+          - @product_type.each do |pt|
+            = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: pt) do
+              - if params[:product_type] == pt
+                .black-box-container
+                  .black-box-parent style='position: relative'
+                    .black-box style='position: relative; top: 0; left: 0'
+                    .small-black-box style='position: absolute; top: 0; left: 0'
+                  .sub-heading style='color: white' = pt
+                  .tick-icon
+              - else
+                .black-box-container
+                  .black-box
+                  .sub-heading style='color: white' = pt
+
+      .filter-price-container
+        .heading-container
+          .filter-price-heading style="color: white" PRICE
+          .js-price-filter-icon.js-show-price-filter
+        .filter-price-collection.js-price-container
+          - @price_ranges.each do |pr|
+            = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: pr) do
+              - if params[:product_type] == pr
+                .black-box-container
+                  .black-box-parent style='position: relative'
+                    .black-box style='position: relative; top: 0; left: 0'
+                    .small-black-box style='position: absolute; top: 0; left: 0'
+                  .sub-heading style="color: white" = "£ #{pr}"
+                  .tick-icon
+              - else
+                .black-box-container
+                  .black-box
+                  .sub-heading style="color: white" = "£ #{pr}"
+
+  #myLeftSidenav.sidenav.hidden-on-large-screen
+    a.close-sort-btn.hidden-on-large-screen href="javascript:void(0)" &times;
+    a href="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=title_ascending" Alphabetically, A-Z
+    a href="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=title_descending" Alphabetically, Z-A
+    a href="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=price_ascending" Price, low to high
+    a href="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=price_descending" Price, high to low
+    a href="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=created_descending" Date, new to old
+    a href="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=created_ascending" Date, old to new
+
+  .openbtn-container.hidden-on-large-screen
+    .openbtn-sub-container.hidden-on-large-screen
+      span.openbtn.hidden-on-large-screen style="font-size:30px; cursor:pointer" FILTER
+
+    .openbtn-sub-container.hidden-on-large-screen
+      span.open-sort-btn.hidden-on-large-screen style="font-size:30px; cursor:pointer" SORT
+
+  .filter-container.hidden-on-small-screen
+    .filter-heading-container
+      .filter-heading FILTER
+      .js-main-filter-icon.js-show-main-filter
+    select.select-style.hidden-on-small-screen onchange="window.location.href=this.value;"
+      option value="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=title_ascending" Alphabetically, A-Z
+      option value="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=title_descending" Alphabetically, Z-A
+      option value="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=price_ascending" Price, low to high
+      option value="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=price_descending" Price, high to low
+      option value="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=created_descending" Date, new to old
+      option value="/?brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=created_ascending" Date, old to new
+
+  .main-container
+    .filter-data-options-container.js-main-container.hidden-on-small-screen
+      - if params[:brand].present?
+        = link_to proxy_prod_path(size: params[:size], product_type: params[:product_type]) do
+          .black-box-container
+            .black-box-parent style='position: relative'
+              .black-box style='position: relative; top: 0; left: 0'
+              .small-black-box style='position: absolute; top: 0; left: 0'
+            .sub-heading = params[:brand]
+            .remove-filter
+
+      - if params[:size].present?
+        = link_to proxy_prod_path(brand: params[:brand], product_type: params[:product_type]) do
+          .black-box-container
+            .black-box-parent style='position: relative'
+              .black-box style='position: relative; top: 0; left: 0'
+              .small-black-box style='position: absolute; top: 0; left: 0'
+            .sub-heading = "Size #{params[:size]}"
+            .remove-filter
+
+      - if params[:product_type].present?
+        = link_to proxy_prod_path(brand: params[:brand], size: params[:size]) do
+          .black-box-container
+            .black-box-parent style='position: relative'
+              .black-box style='position: relative; top: 0; left: 0'
+              .small-black-box style='position: absolute; top: 0; left: 0'
+            .sub-heading = params[:product_type]
+            .remove-filter
+
+      .filter-brand-container.hidden-on-small-screen
+        .heading-container
           .filter-brand-heading BRAND
-          .brand-filter-icon.js-show-brand-filter
+          .js-brand-filter-icon.js-show-brand-filter
         .filter-brand-collection.js-brand-container
           - @vendor_array.each do |va|
             = link_to proxy_prod_path(brand: va, size: params[:size], product_type: params[:product_type]) do
@@ -59,10 +192,10 @@
                   .black-box
                   .sub-heading = va
 
-      .filter-size-container
+      .filter-size-container.hidden-on-small-screen
         .heading-container
           .filter-size-heading SIZE
-          .size-filter-icon.js-show-size-filter
+          .js-size-filter-icon.js-show-size-filter
         .filter-size-collection.js-size-container
           - @size_array.each do |size|
             = link_to proxy_prod_path(size: size, brand: params[:brand], product_type: params[:product_type]) do
@@ -78,10 +211,10 @@
                   .black-box
                   .sub-heading = size
 
-      .filter-type-container
+      .filter-type-container.hidden-on-small-screen
         .heading-container
           .filter-type-heading TYPE
-          .type-filter-icon.js-show-type-filter
+          .js-type-filter-icon.js-show-type-filter
         .filter-type-collection.js-type-container
           - @product_type.each do |pt|
             = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: pt) do
@@ -97,10 +230,10 @@
                   .black-box
                   .sub-heading = pt
 
-      .filter-price-container
+      .filter-price-container.hidden-on-small-screen
         .heading-container
           .filter-price-heading PRICE
-          .price-filter-icon.js-show-price-filter
+          .js-price-filter-icon.js-show-price-filter
         .filter-price-collection.js-price-container
           - @price_ranges.each do |pr|
             = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: pr) do
