polish for nav bars and jquery

--- a/app/assets/stylesheets/filter.sass
+++ b/app/assets/stylesheets/filter.sass
@@ -4,8 +4,8 @@
   display: flex
   justify-content: space-between
   align-items: center
-  padding: 0.5rem
   margin-bottom: 2rem
+  font-size: 14px
 
 .main-container
   min-width: 600px
@@ -64,6 +64,9 @@
   margin: 1rem 0
   line-height: 11px
 
+.close-filter-text
+  font-size: 20px
+
 .black-box-container
   display: flex
   height: 20px
@@ -109,3 +112,15 @@
   background-position: center
   background-size: cover
   margin-left: auto
+
+
+
+
+
+
+
+
+
+#shopify-section-cust-footer
+.penbtn-container
+.main-container
