--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -14,7 +14,7 @@ body
   a
     padding: 8px 0
     text-decoration: none
-    font-size: 25px
+    font-size: 16px
     color: #818181
     display: block
     transition: 0.3s
@@ -48,6 +48,11 @@ body
   align-items: center
   justify-content: space-between
 
+.sort-nav-container
+  display: flex
+  align-items: center
+  min-width: 160px
+
 @media screen and (max-height: 450px)
   .sidenav
     padding-top: 15px
@@ -78,3 +83,5 @@ body
     border-bottom: 1px solid white
   .sub-heading
     color: white
+  .small-black-box
+    margin-right: 0.5rem
