search loading gif added

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -63,5 +63,15 @@
   width: 120px
   display: none
 
+.search-loading-gif
+  background-image: image-url('Eclipse.gif')
+  background-position: center
+  background-size: contain
+  background-repeat: no-repeat
+  height: 50px
+  width: 50px
+  display: inline-block
+  margin: 1rem 0
+
 .hidden-products
   display: none
