fix: added the updates for debounce search and gif loader for infinite scroll

--- a/app/assets/stylesheets/search.sass
+++ b/app/assets/stylesheets/search.sass
@@ -7,7 +7,7 @@
   background-color: #f1f1f1
 
 // Test div for search
-.plop
+.js-search-results
   background: white
   width: 100%
   height: 25em
