padding for app container

--- a/app/assets/stylesheets/filter.sass
+++ b/app/assets/stylesheets/filter.sass
@@ -43,8 +43,9 @@
 
 .filter-data-options-container
   height: 100rem
-  width: 10rem
+  width: 12rem
   float: left
+  margin: 0 1rem 0 0
 
 .filter-brand-container, .filter-price-container
   border-bottom: 1px solid black
@@ -61,7 +62,7 @@
 .heading-container
   display: flex
   justify-content: space-between
-  margin: 1rem 0
+  margin: 2rem 0
   line-height: 11px
 
 .close-filter-text
@@ -69,7 +70,7 @@
 
 .black-box-container
   display: flex
-  height: 20px
+  height: 30px
   min-width: 160px
 
 .black-box
