--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -1,6 +1,7 @@
 .app-container
-  padding: 1rem
+  padding: 0 3rem
   transition: margin-left .5s
+  margin: 0 1rem
 
 .product-container
   width: 100%
